dist_man1_MANS=

if BUILD_RENAISSD
  dist_man1_MANS+=renaissd.1
endif

if ENABLE_QT
  dist_man1_MANS+=renaiss-qt.1
endif

if BUILD_RENAISS_CLI
  dist_man1_MANS+=renaiss-cli.1
endif

if BUILD_RENAISS_TX
  dist_man1_MANS+=renaiss-tx.1
endif

if BUILD_RENAISS_UTIL
  dist_man1_MANS+=renaiss-util.1
endif

if ENABLE_WALLET
if BUILD_RENAISS_WALLET
  dist_man1_MANS+=renaiss-wallet.1
endif
endif
